// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModelCellIdentifier > renders absolute link 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col relative gap-4 w-full"
  >
    <div
      class="p-4 z-0 flex flex-col relative justify-between gap-4 bg-content1 overflow-auto rounded-large shadow-small w-full"
    >
      <table
        aria-describedby=""
        aria-label="Table"
        class="min-w-full h-auto table-auto w-full"
        data-collection="react-aria-:r5:"
        id="react-aria-:r4:"
        role="grid"
        tabindex="0"
      >
        <thead
          class="[&>tr]:first:rounded-lg"
          role="rowgroup"
        >
          <tr
            class="group/tr outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
            role="row"
          >
            <th
              aria-colindex="1"
              aria-describedby="react-aria-description-0"
              aria-sort="none"
              class="group/th px-3 h-10 align-middle bg-default-100 whitespace-nowrap text-foreground-500 text-tiny font-semibold first:rounded-s-lg last:rounded-e-lg data-[sortable=true]:cursor-pointer data-[hover=true]:text-foreground-400 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-start"
              data-collection="react-aria-:r5:"
              data-key="id"
              data-sortable="true"
              id="react-aria-:r4:-id"
              role="columnheader"
              tabindex="-1"
            >
              Id
              <div
                class="flex flex-col ml-auto"
              >
                <span />
                <span />
              </div>
              <svg
                aria-hidden="true"
                class="ms-2 mb-px opacity-0 text-inherit inline-block transition-transform-opacity data-[visible=true]:opacity-100 group-data-[hover=true]/th:opacity-100 data-[direction=ascending]:rotate-180"
                fill="none"
                focusable="false"
                height="1em"
                role="presentation"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="3"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="m6 9 6 6 6-6"
                />
              </svg>
            </th>
          </tr>
          <tr
            aria-hidden="true"
            class="w-px h-px block"
            style="margin-left: 0.25rem; margin-top: 0.25rem;"
            tabindex="-1"
          />
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            aria-labelledby="react-aria-:r4:-0-id"
            class="group/tr outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 cursor-pointer"
            data-collection="react-aria-:r5:"
            data-first="true"
            data-key="0"
            data-last="true"
            data-row-link="/1/blog/1"
            id="react-aria-:r8:"
            role="row"
            tabindex="0"
          >
            <td
              class="py-2 px-3 relative align-middle whitespace-normal text-small font-normal [&>*]:z-1 [&>*]:relative outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 before:content-[''] before:absolute before:z-0 before:inset-0 before:opacity-0 data-[selected=true]:before:opacity-100 group-data-[disabled=true]/tr:text-foreground-300 group-data-[disabled=true]/tr:cursor-not-allowed before:bg-default/60 data-[selected=true]:text-default-foreground group-data-[odd=true]/tr:before:bg-default-100 group-data-[odd=true]/tr:before:opacity-100 group-data-[odd=true]/tr:before:-z-10 first:before:rounded-s-lg last:before:rounded-e-lg text-start group-data-[odd=true]/tr:data-[selected=true]/tr:before:bg-default/60"
              data-collection="react-aria-:r5:"
              data-key="0_id"
              id="react-aria-:r4:-0-id"
              role="rowheader"
              tabindex="-1"
            >
              <a
                href="/1/blogs/1"
              >
                1
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ModelCellIdentifier > should render the component with className from inherited props 1`] = `
<DocumentFragment>
  <div
    class="dummy-class"
  >
    baz
  </div>
</DocumentFragment>
`;

exports[`ModelCellIdentifier > should render the empty text when value is nullish 1`] = `
<DocumentFragment>
  <div>
    -
  </div>
</DocumentFragment>
`;

exports[`ModelCellIdentifier > should render the overridden empty text when value is nullish 1`] = `
<DocumentFragment>
  <div>
    baz
  </div>
</DocumentFragment>
`;

exports[`ModelCellIdentifier > should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelCellIdentifier > should render with global override shorthand for model 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelCellIdentifier > should render with global override shorthand for model and attribute 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;
